[package]
name = "ariadne-parser"
description = "Driven adapter: tree-sitter Parser port implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

# Tier-03 step 12: tree-sitter wraps a C grammar via a safe Rust binding; no
# direct unsafe is authored here, but downgrade the workspace `forbid` to
# `allow` so adapter-internal FFI shims could be added in a later tier
# without a fresh ADR [src: .claude/plans/ariadne-core/tier-03-parser.md step 12].
[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
ariadne-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Tier-03 pins exact versions per plan; bumps go through an ADR.
# tree-sitter 0.26.8 published 2026-03-31 [src: https://crates.io/crates/tree-sitter].
tree-sitter = "=0.26.8"
# Grammar crates. All except kotlin export `LANGUAGE: LanguageFn`; legacy
# tree-sitter-kotlin pins tree-sitter <0.23 and is incompatible — substitute
# the amaanq-maintained `tree-sitter-kotlin-ng` per user decision in this
# session [src: tier-03 build session 2026-05-19].
tree-sitter-typescript = "=0.23.2"
tree-sitter-javascript = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.2"
tree-sitter-go = "=0.25.0"
tree-sitter-java = "=0.23.5"
tree-sitter-kotlin-ng = "=1.1.0"
tree-sitter-c-sharp = "=0.23.5"
# Tier-11: C/C++ syntactic grammars. Both export `LANGUAGE: LanguageFn` via
# `tree-sitter-language ^0.1`, the same `Into<Language>` pattern as the eight
# grammars above [src: docs/adr/0008-c-cpp-syntactic-indexing.md].
tree-sitter-c = "=0.24.2"
tree-sitter-cpp = "=0.23.4"
# js-framework tier-03: `.vue` SFC host grammar. A Vue SFC's top level is
# valid HTML, so `tree-sitter-html` is the host skeleton grammar; the
# `<script>` block is re-parsed as an injected JS/TS layer. Official crate,
# `tree-sitter-language ^0.1` — same `Into<Language>` pattern as above
# [src: docs/adr/0011-framework-grammars-injection.md; plan.md D1].
tree-sitter-html = "=0.23.2"
# js-framework tier-04: `.svelte` / `.astro` SFC host grammars. Both share
# the HTML-family host shape, exporting `LANGUAGE: LanguageFn` via
# `tree-sitter-language ^0.1` — the same `Into<Language>` pattern as above.
# `tree-sitter-svelte-ng` also exports `INJECTIONS_QUERY` (unused — the
# `<script>`-element walk is shared with Vue); `tree-sitter-astro-next` is a
# pre-1.0 grammar pinned exact (plan.md R-Astro-ts; a pin bump = follow-up
# + ADR amendment) [src: docs/adr/0011-framework-grammars-injection.md;
# plan.md D5, D6].
tree-sitter-svelte-ng = "=1.0.2"
tree-sitter-astro-next = "=0.1.1"
# Parse-cache codec [src: tier-03 step 8, plan files list]. 3.0 release was
# yanked from active maintenance (upstream notice on docs.rs); 2.0.1 is the
# last stable line and exposes the `serde` feature the cache module relies on.
bincode = { version = "=2.0.1", features = ["serde"] }
serde = { workspace = true }

[dev-dependencies]
ariadne-core = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }
# `tree-sitter` is already in `[dependencies]` above; Cargo makes regular
# deps visible to tests and benches, so no `[dev-dependencies]` line is
# needed [src: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#development-dependencies].

[[bench]]
name = "parse"
harness = false
