[package]
name = "ariadne-salsa"
description = "Use case: Salsa incremental query DB. Reads through Storage port."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
ariadne-storage = { workspace = true }
thiserror = { workspace = true }
