[package]
name = "ariadne-salsa"
description = "Use case: Salsa incremental query DB. Reads through Storage port."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

# Salsa's `Update` is an `unsafe trait` and `#[derive(salsa::Update)]` expands
# to `unsafe impl Update for ...`. Downgrade the workspace `forbid` so derived
# `Update` impls compile [src: https://docs.rs/salsa/0.26.2/salsa/trait.Update.html].
# Mirrors the analogous lint override on ariadne-parser (tree-sitter FFI shim).
[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
ariadne-core = { workspace = true }
ariadne-storage = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# salsa = the salsa-rs/salsa incremental query DB (not the legacy
# rust-analyzer-salsa fork) [src: https://github.com/salsa-rs/salsa].
salsa = { workspace = true }

[dev-dependencies]
ariadne-core = { workspace = true }
ariadne-storage = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "edit"
harness = false
