[package]
name = "ariadne-scip"
description = "Driven adapter: SCIP subprocess + protobuf Indexer port implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
