[package]
name = "ariadne-storage"
description = "Driven adapter: redb-backed Storage port implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Tier-02 pins exact versions per plan; bumps go through an ADR.
redb = "=4.1.0"
postcard = { version = "=1.1.3", features = ["use-std"] }
blake3 = "=1.8.5"

[dev-dependencies]
ariadne-core = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
sysinfo = "0.31"

[[bench]]
name = "apply"
harness = false
